# finance-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  ideas.md  main.py  portfolio (1).csv  pyproject.toml  to-do.md
migrations/: env.py
migrations/versions/: 7e58b8144479_add_region_isin_figi_to_assets.py  a1c3f8e92d47_drop_weight_from_portfolio_holdings.py  b4d7e1f05c83_change_holding_snapshot_date_to_datetime.py  c9bcdf39c2c9_restructure_returns_to_frequency_model.py  d3f2a8c61e90_change_portfolio_unique_constraint_to_name_source.py  e507b41117f8_add_region_to_factor_returns.py  e865a7730848_fix_region_varchar_length.py  eb880e3db5c0_added_portfolio_holdings_and_.py  ff1ae7e38be3_fix_region_column_length.py
src/: config.py  logger.py
src/api/: dependencies.py  main.py
src/api/routers/: __init__.py  assets.py  factors.py  holdings.py  portfolio.py
src/api/schemas/: __init__.py  assets.py  factors.py  holdings.py  portfolios.py
src/data/: config.py
src/data/database/: __init__.py  db.py  models.py  orm.py
src/data/enrichers/: figi.py  region.py
src/data/fetchers/: aqr.py  cleaner.py  ecb.py  euro_stat.py  fmp.py  fred.py  french.py  french_eu.py  main.py  yf.py  yf_fetcher.py
src/data/repositories/: __init__.py  assets.py  factors.py  fundamentals.py  holdings.py  macro.py  portfolios.py  prices.py  returns.py
src/database/: db.py
src/integrations/: base.py  fred.py  french.py  yf.py
src/logging/: __init__.py  logger.py  summary.py
src/services/: KPIs.py  __init__.py  add_holding.py  add_portfolio.py  weights.py
(+28 files in other folders)
