[project]
name = "finance-backend"
version = "0.1.0"
description = "This is a self coded backend for future finance projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "ecbdata>=0.1.1",
    "fredapi>=0.5.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "redis>=7.3.0",
    "sdmx1>=2.25.1",
    "sqlalchemy>=2.0.48",
    "statsmodels>=0.14.6",
    "yahoo-finance>=1.4.0",
    "yfinance>=1.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

